--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "first etherum project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/ahmad1091/ethOne#readme",
   "dependencies": {
-    "solc": "^0.8.1"
+    "ganache-cli": "^6.12.2",
+    "mocha": "^8.3.0",
+    "solc": "^0.7.0",
+    "web3": "^1.3.4"
   }
 }
