--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ganache-cli": "^6.12.2",
     "mocha": "^8.3.0",
     "solc": "^0.7.0",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.3.4"
   }
 }
