--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/ahmad1091/ethOne#readme",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.2.2",
     "ganache-cli": "^6.12.2",
     "mocha": "^8.3.0",
-    "solc": "^0.7.0",
+    "solc": "^0.7.6",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.3.4"
   }
